--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -132,6 +132,11 @@
     <ClInclude Include="globals.h" />
     <ClInclude Include="MemoryManager.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="config.txt" />
+    <Text Include="csopesy-log.txt" />
+    <Text Include="csopesy-trace.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
