--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="config.txt" />
+    <Text Include="csopesy-backing-store.txt" />
     <Text Include="csopesy-log.txt" />
     <Text Include="csopesy-trace.txt" />
   </ItemGroup>
