--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -37,5 +37,6 @@
     <Text Include="config.txt" />
     <Text Include="csopesy-log.txt" />
     <Text Include="csopesy-trace.txt" />
+    <Text Include="csopesy-backing-store.txt" />
   </ItemGroup>
 </Project>
